# md_writer-gtk

./: Cargo.toml  README.md
src/: file_manager.rs  main.rs  markdown_renderer.rs  sample_content.md  sidebar_controls.rs
src/ui/: main-window.ui  mod.rs
